fixed content clipping
previously, certain characters  were clipped below the baseline

unfortunately, this required overriding the CSS framework's defaults;
smell much?

--- a/public/statuses/css/statuses.css
+++ b/public/statuses/css/statuses.css
@@ -1,6 +1,11 @@
 body {
     margin: 30px;
 }
+body,
+.content { /* required to override Bootstrap defaults */
+    line-height: 1.33em;
+}
+
 ul {
     list-style-type: none;
     padding: 0;
